--- a/style.css
+++ b/style.css
@@ -6,9 +6,21 @@
 
 #left { left: 0; }
 #right { right: 0; }
+#left, #right {
+  cursor: pointer;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  width: 7.5%;
+}
+
+#left:hover, #right:hover { background-color: rgba(255, 255, 255, .6); }
+
 #bullets {
   text-align: center;
-  width: 20%;
+  width: 50%;
+  height: 7.5%;
   margin: 0 auto;
   bottom: 0;
   right: 0;
@@ -18,17 +30,27 @@
 
 #bullets li { display: inline-block; }
 .bullet {
+  margin: 60% .2rem;
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
-  background-color: white;
+  width: .9rem;
+  height: .9rem;
+  background-color: rgba(255, 255, 255, .5);
+  border-radius: 50%;
 }
+
+.bullet:hover { background-color: rgba(255, 255, 255, 1); }
 
 .controls {
   z-index: 2;
+  border: 1px solid rgba(255, 255, 255, .2);
   position: absolute;
-  background-color: blue;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
+
+.controls:hover { border-color: rgba(255, 255, 255, .4); }
 
 .slider-img {
   width: 100%;
