--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #container {
   position:relative;
   height: 500px;
-  width: 1200px;
+  width: 1000px;
 }
 
 #left { left: 0; }
@@ -51,11 +51,12 @@
   width: 100%;
   height: 100%;
   opacity: 0;
-  position:absolute;
+  position: absolute;
   left: 0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -o-transition: opacity .5s ease-in-out;
+  transition: opacity .5s ease-in-out;
 }
+
 .show { opacity: 100 !important; }
